logo added, used also for pwa. new screenshot for pwa not showing. bug: Hamburger menu very stökig logo resizes  and unpixel at small screens

--- a/WebPushNotificationApp.Mvc/wwwroot/css/site.css
+++ b/WebPushNotificationApp.Mvc/wwwroot/css/site.css
@@ -90,8 +90,6 @@ nav {
     top: 0;
     width: 100%;
     z-index: 1000;
-    opacity: 0;
-    transition: all 0.2s ease-in;
 }
     nav:hover {
         opacity: 1;
